--- a/fylo/index.html
+++ b/fylo/index.html
@@ -35,7 +35,7 @@
     </section>
     <section class="fact">
       <div class="row">
-        <div>
+        <div id="access">
           <img src="images/icon-access-anywhere.svg" />
           <h3>Access your files, anywhere</h3>
           <p>
@@ -43,7 +43,7 @@
             account means your files follow you everywhere.
           </p>
         </div>
-        <div>
+        <div  id="access">
           <img src="images/icon-security.svg" />
           <h3>Security you can trust</h3>
           <p>
@@ -61,7 +61,7 @@
             for live collaboration. No email attachments required.
           </p>
         </div>
-        <div>
+        <div class="store">
           <img src="images/icon-any-file.svg" />
           <h3>Store any type of file</h3>
           <p>
@@ -70,10 +70,12 @@
             shared.
           </p>
         </div>
-      </div>
+      </div  id="access">
       <div class="stay-product">
-        <img src="images/illustration-stay-productive.png">
-        <div class="stay-p">
+        <div class="stay">
+         <img src="images/illustration-stay-productive.png">
+        </div>
+      <div class="stay-p">
           <h1>Stay productive, <br>wherever you are </h1>
           <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
           <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required</p>
@@ -127,7 +129,9 @@
           <div class="intbut">
             <!--div class="input"></div-->
             <input type="text">
-            <button>Get Started</button>
+            <div id="input">
+              <button>Get Started</button>
+            </div>
           </div>
         </div>
       </div>
@@ -168,17 +172,17 @@
         </div>          
         <div class="m-middle">
             <ul>
-              <li>About Us</li>
-              <li>Jobs</li>
-              <li>Press</li>
-              <li>Blog</li>
+              <li><a rel="click" href="#">About Us</a></li>
+              <li><a rel="click" href="#">Jobs</a></li>
+              <li><a rel="click" href="#">Press</a></li>
+              <li><a rel="click" href="#">Blog</a></li>
             </ul>
         </div>
         <div class="right-middle">
             <ul>
-              <li>Contact Us</li>
-              <li>Terms</li>
-              <li>Privacy</li>
+              <li><a rel="click" href="#"> Contact Us</a></li>
+              <li><a rel="click" href="#">Terms</a></li>
+              <li><a rel="click" href="#">Privacy</a></li>
             </ul>
         </div>
         <div class="socials">
